# Intelligent-Daemon-Interface

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tau_history  ARCHIVE.md  CODEBASE_ANALYSIS_TODO.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GUI_ROADMAP.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SIMPLIFIED.md  PRODUCTION_STATUS.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  TAU_TESTNET_INTEGRATION_RECOMMENDATIONS.md  deep-security-analysis.md  lake-manifest.json  package-lock.json  package.json  pyproject.toml  run_gui.sh
.cursor/: mcp.json
.github/workflows/: ci.yml  security.yml
Internal/: SECURITY_HARDENING_CHECKLIST.md
Internal/intelligent_augmentation_network/: IAN_IMPLEMENTATION_PLAN.md
alignment_theorem_package/docs/: Alignment_Theorem_Academic.tex  THE_ALIGNMENT_THEOREM.md
alignment_theorem_package/visuals/: alignment_theorem_visualizer.html
alignment_theorem_repo/docs/: Alignment_Theorem_Academic.tex
analysis/simulations/: plot_alignment_results.py  run_alignment_simulations.py
archive/: README.md
archive/lean_proofs/: lakefile.lean
docs/: FORMAL_AGGREGATION_PLAN.md  IDI_IAN_ARCHITECTURE.md  IDI_INTRODUCTION_POST.md  IDI_SYNTH_API.md  IDI_X_ARTICLE.md  IDI_X_THREAD.md  MODULAR_SYNTH_AND_AUTO_QAGENT.md  MODULAR_SYNTH_QUALITY_AND_TESTING.md  PARAMETERIZATION_AND_SYNTH_VISUALS.md  README.md  SECURITY_SPEC_A_GRADE.md  TauNet_Deflationary_Ecosystem_DeepDive.md  alignment_theorem_visualizer.html  lookup_q_table_brief.md  mutation-testing.md  procedural-testing.md
docs/gui_walkthrough/: GUI_WALKTHROUGH.md
examples/synth/: README.md  conservative_qagent_goal.json  conservative_trader.agentpatch.json  research_qagent_goal.json
idi/: README.md  __init__.py  cli.py  logging.py
idi/contracts/: streams.py
idi/devkit/: README.md  USAGE.md  __init__.py  build_layers.py  builder.py  create_agent.py
idi/docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  DOMAIN_MODEL.md  FACTORED_TABLES.md  IDI_DEV_LOG.md  PRODUCTION_HARDENING_SUMMARY.md  RUNBOOK.md  SECURITY_MODEL.md  SYSTEMATIC_REVIEW.md
idi/examples/: README.md
idi/gui/: README.md  settings.json
idi/ian/: README.md  SECURITY.md  (+18 more)
idi/ian/ian_core/: Cargo.toml
idi/ian/ian_core/benches/: bloom_bench.rs  mmr_bench.rs
idi/ian/ian_core/src/: bloom.rs  dedup.rs  leaderboard.rs  lib.rs  mmr.rs
idi/ian/zkml/nova_ffi/: Cargo.toml  README.md  pyproject.toml
idi/ian/zkml/nova_ffi/src/: lib.rs
idi/zk/risc0/methods/idi-manifest/: Cargo.toml
idi/zk/risc0/methods/idi-manifest/src/: main.rs
internal/: __init__.py
mutants/: pyproject.toml
mutants/idi/devkit/rust/: Cargo.toml
mutants/idi/training/rust/idi_iann/: Cargo.toml
mutants/idi/training/rust/idi_iann/src/: config.rs  crypto_sim.rs  error.rs  lib.rs
mutants/idi/training/rust/idi_iann/tests/: smoke.rs
mutants/idi/zk/risc0/: Cargo.toml
mutants/idi/zk/risc0/host/: Cargo.toml
mutants/idi/zk/risc0/methods/idi-qtable/fuzz/: Cargo.toml
mutants/idi/zk/risc0/methods/src/: lib.rs
proofs/: AlignmentTheorem.lean
scripts/: build_tau.sh  run.sh  run_tau_specs.py  test.sh
specification/: AGENT_EVOLUTION.md  BENCHMARK_ANALYSIS.md  BITVECTOR_AGENT_BEST_PRACTICES.md  IMPROVEMENTS_ANALYSIS.md  INFINITE_DEFLATION_ALIGNMENT.md  TAU_LANGUAGE_CAPABILITIES.md  TESTNET_READY.md  UPGRADE_V35_TO_V37.md  agent4_testnet_v35.tau  agent4_testnet_v39a.tau  agent4_testnet_v39b.tau  agent4_testnet_v39c.tau  agent4_testnet_v40_audit.tau  agent4_testnet_v40_core.tau  agent4_testnet_v41.tau  agent4_testnet_v42.tau  agent4_testnet_v43.tau  agent4_testnet_v44.tau  agent4_testnet_v45.tau  agent4_testnet_v46.tau  agent4_testnet_v47.tau  agent4_testnet_v48.tau  agent4_testnet_v49.tau  agent4_testnet_v50.tau  agent4_testnet_v51.tau  agent4_testnet_v52.tau  agent4_testnet_v53.tau  agent4_testnet_v54.tau  agent_burn_coordinator.tau  agent_reflexivity_guard.tau  agent_virtue_compounder.tau  inputs  outputs  prng_module.tau  test_file_spec.tau
tau_bv_specs/: 01_echo_simple.tau  02_negation.tau  03_memory_delay.tau  04_toggle.tau  05_and_gate.tau  06_xor_gate.tau  10_bv_counter.tau  11_bv_echo.tau  12_bv_add.tau  13_bv_comparator.tau  14_bv_threshold.tau  15_bv_accumulator.tau  20_trading_signals.tau  21_position_tracker.tau  22_profit_tracker.tau  30_deflationary_agent_bv.tau  31_deflationary_agent_simple.tau  README.md  deflationary_agent_test_trace.sh  run_tests.sh  test_01_echo.tau  test_01_echo_v2.tau  test_02_negation.tau  test_deflationary_agent.sh  test_deflationary_simple.sh  test_simple_console.tau
tau_daemon_alpha/: Cargo.toml  README.md  TESTING_SUMMARY.md  tau_daemon.toml
tau_daemon_alpha/daemon/: Cargo.toml
tau_daemon_alpha/daemon/src/: actuator.rs  execution.rs  fsio.rs  guards.rs  kernel.rs  ledger.rs  looper.rs  main.rs  monitors.rs  oracle.rs  state.rs
tau_daemon_alpha/daemon/src/guards/: cooldown.rs  failure.rs  freshness.rs  profit.rs  risk.rs
tau_q_agents/: ARCHITECTURE.md  README.md  test_all.sh
tau_q_agents/phase6_rust/: Cargo.toml
tau_q_agents/phase6_rust/src/: main.rs
verification/: FINAL_VERIFICATION_REPORT.md  PERFORMANCE_BENCHMARK_GUIDE.md  alignment_theorem_results.json  alignment_theorem_tests.py  benchmark_results.json  benchmark_versions.py  bv_benchmark_results.json  bv_trace_analyzer.py  comprehensive_fsm_analyzer.py  comprehensive_fsm_coverage.py  coverage_generator.py  coverage_tests.json  decimal_economics_analysis.py  deep_trace_analysis.py  deep_trace_results.json  economic_analysis_results.json  edge_case_results.json  edge_case_tests.py  exhaustive_coverage_results.json  exhaustive_fsm_tester.py  formal_verification.py  formal_verification_results.json  fsm_analysis_results.json  fsm_coverage_results.json  fsm_graph.json  fsm_model.py  improved_coverage_results.json  improved_coverage_tests.py  input_simulator.py  p2p_edge_tests.json  performance_benchmark.py  reflexivity_stress_test.py  run_benchmarks.sh  run_full_verification.py  simulated_inputs.json  stress_test_results.json  stress_test_suite.py  tau_p2p_edge_tests.py  test_cli.tau  test_prng.py  (+14 more)
(+778 files in other folders)
