[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tau_core = { path = "../tau_core" }
anyhow = "1.0"
tau_solver = { path = "../tau_solver" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
