[package]
name = "ian_core"
version = "0.1.0"
edition = "2021"
authors = ["IDI Project"]
description = "High-performance Rust implementation of IAN core components"
license = "MIT"

[lib]
name = "ian_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Async (optional)
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1.4"

[features]
default = []
python = ["pyo3"]
async = ["tokio"]

[[bench]]
name = "mmr_bench"
harness = false

[[bench]]
name = "bloom_bench"
harness = false
