[package]
name = "idi-devkit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-agent"
path = "src/bin/create_agent.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "create-agent-gui"
path = "src/bin/create_agent_gui.rs"

[[bin]]
name = "wizard-gui"
path = "src/bin/wizard_gui.rs"

[dev-dependencies]

[dependencies.eframe]
version = "0.24"
default-features = false
features = ["default", "glow"]

[dependencies.egui]
version = "0.24"
default-features = false
features = ["default"]

