[workspace]
members = ["host", "methods", "methods/idi-manifest", "methods/idi-qtable"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
walkdir = "2.5"
hex = "0.4"
risc0-zkvm = { version = "=3.0.4", default-features = false }
risc0-build = "=3.0.4"

