[package]
name = "idi_risc0_methods_guest"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
risc0-zkvm = { workspace = true, default-features = false }
sha2 = { workspace = true, default-features = false, features = ["oid"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

