[package]
name = "idi_risc0_host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
hex = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
idi_risc0_methods = { path = "../methods" }
bincode = "1.3"

